dark mode not fixed

--- a/src/assets/less/reviews.less
+++ b/src/assets/less/reviews.less
@@ -1,102 +1,131 @@
+/* PAGE-SPECIFIC STYLES FOR THE REVIEWS PAGE */
+
 /*-- -------------------------- -->
-<---          Services          -->
+<---           Reviews          -->
 <--- -------------------------- -*/
 
-/* Mobile - 360px */
+/* Mobile */
 @media only screen and (min-width: 0rem) {
-    #services-468 {
-        padding: var(--sectionPadding);
-        position: relative;
-    }
-    #services-468 .cs-container {
-        width: 100%;
-        /* changes to 1440px at tablet */
-        max-width: 34.375em;
+    #reviews {
         margin: auto;
-    }
-    #services-468 .cs-card-group {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: stretch;
-        flex-wrap: wrap;
-        /* 8px - 20px */
-        column-gap: clamp(0.5rem, 1.5vw, 1.25rem);
-        row-gap: 1.25rem;
-    }
-    #services-468 .cs-item {
-        width: 48.5%;
-        list-style: none;
-        /* 24px - 48px top and bottom */
-        padding: clamp(1.5rem, 4vw, 3rem) 1.5rem;
-        /* prevents padding and border from affecting height and width */
-        box-sizing: border-box;
-        border-radius: 0.75rem;
-        background-color: #fff;
-        border: 1px solid #b4b2c7;
-        box-shadow: 0px 24px 54px rgba(87, 107, 147, 0.12);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        /* 12px - 24px */
-        gap: clamp(0.875rem, 2vw, 2rem);
-        position: relative;
-        transition: border-color 0.3s;
-    }
-    #services-468 .cs-item:before {
-        /* green border on hover */
-        content: "";
-        width: 100%;
-        height: 100%;
-        background: transparent;
-        /* prevents mouse from interacting with it */
-        pointer-events: none;
-        border: 4px solid var(--primaryLight);
-        box-sizing: border-box;
-        /* prevents border from affecting height and width */
-        border-radius: 0.625rem;
-        opacity: 0;
-        position: absolute;
-        display: block;
-        top: 0;
-        left: 0;
-        transition: opacity 0.3s;
-    }
-    #services-468 .cs-item:hover {
-        border-color: var(--primaryLight);
-    }
-    #services-468 .cs-item:hover:before {
-        opacity: 1;
-    }
-    #services-468 .cs-item:nth-of-type(5) {
-        width: 100%;
-    }
-    #services-468 .cs-icon {
-        /* 44px - 90px */
-        width: clamp(2.75rem, 6vw, 5.625rem);
-        height: auto;
-    }
-    #services-468 .cs-h3 {
-        /* 16px - 25px */
-        font-size: clamp(1rem, 2vw, 1.5625rem);
-        line-height: 1.2em;
-        text-align: center;
-        margin: 0;
-        color: var(--headerColor);
+        padding-top: (120/16rem);
+        padding-bottom: (50/16rem);
+
+        .container {
+            max-width: (1320/16rem);
+            width: 96%;
+        }
+
+        .review {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            border-radius: (5/16rem);
+            margin: auto;
+            margin-bottom: (100/16rem);
+            background: #fff;
+            max-width: (410/16rem);
+            width: 100%;
+            padding: (64/16rem) (30/16rem) (18/16rem) (30/16rem);
+            box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
+
+            .profile {
+                position: absolute;
+                top: calc(-51 / 16 * 1rem);
+                left: (30/16rem);
+                display: block;
+                border-radius: 50%;
+                margin-bottom: (16/16rem);
+                margin-left: 0;
+                height: (99/16rem);
+                width: (99/16rem);
+            }
+
+            p {
+                margin-bottom: (28/16rem);
+                line-height: 1.5em;
+                text-align: left;
+            }
+
+            .star-group {
+                display: flex;
+                flex-wrap: nowrap;
+                justify-content: space-between;
+                align-items: center;
+                border-top: 1px solid #e7e7e7;
+                margin-top: auto;
+                padding-top: (16/16rem);
+
+                .name {
+                    display: block;
+                    line-height: (24/16rem);
+                    font-weight: bold;
+                    color: #1a1a1a;
+                    text-align: left;
+                }
+
+                .desc {
+                    display: block;
+                    font-weight: 400;
+                    color: #575757;
+                }
+
+                img {
+                    display: block;
+                    margin: 0;
+                    height: (15/16rem);
+                    width: (91/16rem);
+                }
+            }
+            &:last-of-type {
+                margin-bottom: 0;
+            }
+        }
     }
 }
-/* Tablet - 768px */
+
+/* Tablet */
 @media only screen and (min-width: 48rem) {
-    #services-468 .cs-container {
-        max-width: 90rem;
-    }
-    #services-468 .cs-card-group {
-        flex-wrap: nowrap;
-        flex-direction: row;
-    }
-    #services-468 .cs-item {
-        width: 100%;
+    #reviews {
+        padding-top: (150/16rem);
+        padding-bottom: (50/16rem);
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 0;
+            font-size: ~"min(1.4vw, 1em)";
+            column-gap: (30/16rem);
+        }
+
+        .review {
+            margin: 0;
+            margin-bottom: (150/16rem);
+
+            &:last-of-type {
+                margin-bottom: (150/16rem);
+            }
+        }
     }
 }
-                                
+
+/* Dark Mode */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode {
+        #reviews {
+            .review {
+                background: var(--medium);
+
+                .name {
+                    color: #fff;
+                }
+
+                .desc {
+                    opacity: 0.7;
+                    color: #fff;
+                }
+            }
+        }
+    }
+}
